Fixed footer on mobile!!!! YIPPEEEEEEEEEEEEEEEE

--- a/res/styles/footer.css
+++ b/res/styles/footer.css
@@ -1,12 +1,14 @@
 footer {
     display: flex;
+    flex-wrap: wrap;
     margin-top: auto;
     border-radius: 0px 0px 10px 10px;
     background-image: url("../img/themes/nav-overworld.jpg");
 }
 
 footer a {
-    align-items: middle;
+    display: flex;
+    align-items: center;
     padding: 0.5em;
 }
 
